--- a/style.css
+++ b/style.css
@@ -1,25 +1,76 @@
 body{
+    font-family: sans-serif;
     background-color: black;
 }
-.container{
-	height: 200px;
-	width: 100%;
-    text-align: center;
-    margin: 0px auto;
+#container{
+    width: 1000px;
+    height: 550px;
+     background-image: url(bgImage.jpg);
+    margin: 30px auto;
     
-
 }
-p,h1{
-    font-size: 70px;
-    font-weight: bold;
-    color: white;
-}
-button{
-	text-align: center;
-	font-size: 40px;
+#calculator{
+    width: 320px;
+    height: 520px;
+    background-color: bisque;
+    margin: 0 auto;
+    top:20px;
+    position: relative;
     border-radius: 5px;
-    font-weight: bold;
-    margin-right: 15px;
-    border: 5px solid white;
+    box-shadow: -1px 1px 0px 14px #888888;
+}
+#result{
+    height: 120px;
+}
+#keyboard{
+    height: 400px;
+}
+#history{
+    text-align: right;
+    font-size: 15px;
+    height: 20px;
+    background-color: white;
+    margin: 0 20px;
+    padding-top: 20px;
+}
+#output{
+    text-align: right;
+    height: 60px;
+    margin: 10px 20px;
     
+}
+.operator, .number, empty{
+    width: 50px;
+    height:50px;
+    margin: 15px;
+    float: left;
+    border-radius: 50%;
+    border-width: 0px;
+    font-weight: bold;
+    font-size: 15px;
+    cursor: pointer;
+    
+    
+}
+.operator:active, .number :active{
+    font-size: 13px;
+}
+.operator:focus, .number:focus, .empty:focus{
+    outline: 0;
+}
+button:nth-child(4){
+    font-size: 20px;
+    background-color: blueviolet;
+}button:nth-child(8){
+    font-size: 20px;
+    background-color: blueviolet;
+}button:nth-child(12){
+    font-size: 20px;
+    background-color: blueviolet;
+}button:nth-child(16){
+    font-size: 20px;
+    background-color: blueviolet;
+}button:nth-child(20){
+    font-size: 20px;
+    background-color: blueviolet;
 }
